--- a/src/index.css
+++ b/src/index.css
@@ -6,6 +6,6 @@
 }
 
 body {
-  /* background-color: #1d1d1d; */
-  background-color: seagreen;
+  background-color: #1d1d1d;
+  /* background-color: seagreen; */
 }
